fixed h3 margin on collapsiable

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,3 +13,7 @@ a {
    font-weight: normal;
    font-size: .9em;
 }
+
+.more_links {
+   margin: 0;
+}
